libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__data-minimal.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: "format!(\"{bp:#?}\")"

---
Blueprint {
    version: Some(
        Scalar {
            value: String(
                "2025-11-02",
            ),
            span: Some(
                Span {
                    start: Position {
                        line: 1,
                        column: 9,
                    },
                    end: Some(
                        Position {
                            line: 1,
                            column: 21,
                        },
                    ),
                },
            ),
        },
    ),
    transform: [],
    variables: NamedMap {
        values: {},
        source_meta: {},
    },
    values: NamedMap {
        values: {},
        source_meta: {},
    },
    include: NamedMap {
        values: {},
        source_meta: {},
    },
    resources: NamedMap {
        values: {},
        source_meta: {},
    },
    data_sources: NamedMap {
        values: {
            "network": DataSource {
                ds_type: Spanned {
                    value: "aws/vpc",
                    span: Some(
                        Span {
                            start: Position {
                                line: 3,
                                column: 15,
                            },
                            end: Some(
                                Position {
                                    line: 3,
                                    column: 22,
                                },
                            ),
                        },
                    ),
                },
                metadata: None,
                filters: [
                    Filter {
                        field: Scalar {
                            value: String(
                                "tags",
                            ),
                            span: Some(
                                Span {
                                    start: Position {
                                        line: 4,
                                        column: 12,
                                    },
                                    end: Some(
                                        Position {
                                            line: 4,
                                            column: 18,
                                        },
                                    ),
                                },
                            ),
                        },
                        operator: Spanned {
                            value: Equals,
                            span: Some(
                                Span {
                                    start: Position {
                                        line: 4,
                                        column: 19,
                                    },
                                    end: Some(
                                        Position {
                                            line: 4,
                                            column: 21,
                                        },
                                    ),
                                },
                            ),
                        },
                        search: [
                            StringOrSubstitutions {
                                values: [
                                    String {
                                        value: "primary",
                                        span: Some(
                                            Span {
                                                start: Position {
                                                    line: 4,
                                                    column: 22,
                                                },
                                                end: Some(
                                                    Position {
                                                        line: 4,
                                                        column: 31,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ],
                                span: Some(
                                    Span {
                                        start: Position {
                                            line: 4,
                                            column: 22,
                                        },
                                        end: Some(
                                            Position {
                                                line: 4,
                                                column: 31,
                                            },
                                        ),
                                    },
                                ),
                            },
                        ],
                        span: Some(
                            Span {
                                start: Position {
                                    line: 4,
                                    column: 5,
                                },
                                end: Some(
                                    Position {
                                        line: 4,
                                        column: 31,
                                    },
                                ),
                            },
                        ),
                    },
                ],
                exports: DataSourceExportMap {
                    exports: NamedMap {
                        values: {
                            "vpcId": DataSourceExport {
                                field_type: Spanned {
                                    value: String,
                                    span: Some(
                                        Span {
                                            start: Position {
                                                line: 6,
                                                column: 19,
                                            },
                                            end: Some(
                                                Position {
                                                    line: 6,
                                                    column: 25,
                                                },
                                            ),
                                        },
                                    ),
                                },
                                alias_for: None,
                                description: None,
                                span: Some(
                                    Span {
                                        start: Position {
                                            line: 6,
                                            column: 12,
                                        },
                                        end: Some(
                                            Position {
                                                line: 6,
                                                column: 17,
                                            },
                                        ),
                                    },
                                ),
                            },
                        },
                        source_meta: {
                            "vpcId": Span {
                                start: Position {
                                    line: 6,
                                    column: 12,
                                },
                                end: Some(
                                    Position {
                                        line: 6,
                                        column: 17,
                                    },
                                ),
                            },
                        },
                    },
                    export_all: false,
                },
                description: None,
                span: Some(
                    Span {
                        start: Position {
                            line: 3,
                            column: 6,
                        },
                        end: Some(
                            Position {
                                line: 3,
                                column: 13,
                            },
                        ),
                    },
                ),
                fields_source_meta: {},
            },
        },
        source_meta: {
            "network": Span {
                start: Position {
                    line: 3,
                    column: 6,
                },
                end: Some(
                    Position {
                        line: 3,
                        column: 13,
                    },
                ),
            },
        },
    },
    exports: NamedMap {
        values: {},
        source_meta: {},
    },
    metadata: None,
    span: None,
}
