libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__data-not-before-eq.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: 'not' is only valid before 'in', 'has key', 'contains', 'starts with', or 'ends with' at 1:30
	  1 | data n: aws/vpc { filter "x" not == "y"
	    |                              ^
	- parse error: expected '{', got '}' at 2:19
	  2 | export id: string }
	    |                   ^
	- parse error: missing required 'version' directive
