libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__data-unknown-field.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: unknown field "foo" in data declaration at 1:19
	  1 | data n: aws/vpc { foo = "bar" }
	    |                   ^
	- parse error: missing required 'version' directive
