libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__element-type-single-segment.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: expected '/', got '{' at 1:24
	  1 | variable instance: aws {}
	    |                        ^
	- parse error: missing required 'version' directive
