libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__empty-transform-list.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: expected at least one transform in list at 2:1
	  2 | transform []
	    | ^
