libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__export-bad-type.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: expected an export type, got identifier at 1:11
	  1 | export x: notAType { field = variables.x }
	    |           ^
	- parse error: missing required 'version' directive
