libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__export-bare-ref.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: "format!(\"{bp:#?}\")"

---
Blueprint {
    version: Some(
        Scalar {
            value: String(
                "2025-11-02",
            ),
            span: Some(
                Span {
                    start: Position {
                        line: 1,
                        column: 9,
                    },
                    end: Some(
                        Position {
                            line: 1,
                            column: 21,
                        },
                    ),
                },
            ),
        },
    ),
    transform: [],
    variables: NamedMap {
        values: {},
        source_meta: {},
    },
    values: NamedMap {
        values: {},
        source_meta: {},
    },
    include: NamedMap {
        values: {},
        source_meta: {},
    },
    resources: NamedMap {
        values: {},
        source_meta: {},
    },
    data_sources: NamedMap {
        values: {},
        source_meta: {},
    },
    exports: NamedMap {
        values: {
            "saveOrderFunctionArn": Export {
                export_type: Spanned {
                    value: String,
                    span: Some(
                        Span {
                            start: Position {
                                line: 3,
                                column: 30,
                            },
                            end: Some(
                                Position {
                                    line: 3,
                                    column: 36,
                                },
                            ),
                        },
                    ),
                },
                field: Scalar {
                    value: String(
                        "resources.saveOrderFunction.spec.functionArn",
                    ),
                    span: Some(
                        Span {
                            start: Position {
                                line: 4,
                                column: 13,
                            },
                            end: Some(
                                Position {
                                    line: 4,
                                    column: 57,
                                },
                            ),
                        },
                    ),
                },
                description: Some(
                    StringOrSubstitutions {
                        values: [
                            String {
                                value: "The ARN of the function used to save orders",
                                span: Some(
                                    Span {
                                        start: Position {
                                            line: 5,
                                            column: 19,
                                        },
                                        end: Some(
                                            Position {
                                                line: 5,
                                                column: 64,
                                            },
                                        ),
                                    },
                                ),
                            },
                        ],
                        span: Some(
                            Span {
                                start: Position {
                                    line: 5,
                                    column: 19,
                                },
                                end: Some(
                                    Position {
                                        line: 5,
                                        column: 64,
                                    },
                                ),
                            },
                        ),
                    },
                ),
                span: Some(
                    Span {
                        start: Position {
                            line: 3,
                            column: 8,
                        },
                        end: Some(
                            Position {
                                line: 3,
                                column: 28,
                            },
                        ),
                    },
                ),
            },
        },
        source_meta: {
            "saveOrderFunctionArn": Span {
                start: Position {
                    line: 3,
                    column: 8,
                },
                end: Some(
                    Position {
                        line: 3,
                        column: 28,
                    },
                ),
            },
        },
    },
    metadata: None,
    span: None,
}
