libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__export-unknown-field.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: unknown field "foo" in export declaration at 1:20
	  1 | export x: string { foo = "bar" }
	    |                    ^
	- parse error: missing required 'version' directive
